tests/warn/record.jo
type Point = {x: Int, y: Int}


type Error = {
  x: Int,
  x: Int       // error
}

type PointReorder = {y: Int, x: Int}

def main =
  val p1: Point = {x: 1, y: 2}
  val p2: Point = {x: 10, y: false} // error
  val p3: Int = 5

  val p4: PointReorder = p1  // error

  println p3.x // error
  println p1.z // error
